agregue imagenes a la diapo de img del inicio

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>We are hell</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css1/estilo.css">
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+        <br>
         <h3> El handpoke </h3> <!--Subtitulo-->
 
         <p class="parrafoGral"> Hola! Mi nombre es Luciano Méndez, pasión por el dibujo la tengo desde chico, desde 2015 decidí volcar esa información al mundo del tatuaje utilizando la tecnica "Handpoke". En 2017 luego de conseguir mis primeros clientes, comencé este nuevo proyecto "Hell Studio", el cual lleva 5 años en marcha, y a través de esta web comenzamos con la venda de insumos. Actualmente me encuentro realizando un curso de Adobe Illustrator, el cual me ayuda con lo que es diseño para luego plasmarlo en la piel de cada cliente.
@@ -33,17 +34,16 @@
             
             Trata de (como dice el nombre, en inglés) empujar con la mano. El kit cuenta con una aguja profesional (exactamente la misma que se usa en las máquinas), un needle top (dispositivo en el que insertamos la aguja), y nuestra tinta. El proceso lleva más tiempo que un tatuaje a máquina, ya que se realiza punto a punto, este queda grabado en la primera capa de la piel, y es menos dañino para la misma haciendo que cicatrice y cure mas rápido  </p>
         <br><br>
-
+        <h3>Mis trabajos</h3>
+        <br><br>
+        <!--Diap de img-->
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="img tatto/fuego.jpeg" class="d-block w-100" alt="...">
+                <img src="imgdiapos/diap1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="img tatto/mariposas.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img tatto/montañas.jpeg" class=" h-10 w-100" alt="...">
+                <img src="imgdiapos/puti.jpg" class="d-block w-100" alt="...">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
