agregue diapo de imagenes a diseños

--- a/diseños.html
+++ b/diseños.html
@@ -27,29 +27,64 @@
     <h3>Diseños Hell</h3>
     
     <p><strong>Diseños para hacer en pareja</strong></p>
-    <h4>(Apartado para diapositiva de imagenes)</h4>
-    <span></span>
-    <img class="imagenes" src="img tatto/gatito.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitoo.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitooo.jfif" alt="">
-    </span>
-
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <p><strong>Diseños minimalistas</strong></p>
-    <h4>(Apartado para diapositiva de imagenes)</h4>
-    <span></span>
-    <img class="imagenes" src="img tatto/gatito.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitoo.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitooo.jfif" alt="">
-    </span>
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <p><strong>De autor</strong></p>
     <h4>(Apartado para diapositiva de imagenes)</h4>
-    <span></span>
-    <img class="imagenes" src="img tatto/gatito.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitoo.jpg" alt="">
-    <img class="imagenes" src="img tatto/gatitooo.jfif" alt="">
-    </span>
-
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="imgdiapos/mios.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="imgdiapos/mios.png" class="d-block w-100" alt="...">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <footer class="footer">
         <p class="parrafoFooter">Sitio creado y diseñado por Etienne Tauss
             <br><br>
