--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </header>
     <main>
         <br>
-        <h3> El handpoke </h3> <!--Subtitulo-->
-
+        <h3 class="subtitulo1"> El handpoke </h3> <!--Subtitulo-->
         <p class="parrafoGral"> Hola! Mi nombre es Luciano Méndez, pasión por el dibujo la tengo desde chico, desde 2015 decidí volcar esa información al mundo del tatuaje utilizando la tecnica "Handpoke". En 2017 luego de conseguir mis primeros clientes, comencé este nuevo proyecto "Hell Studio", el cual lleva 5 años en marcha, y a través de esta web comenzamos con la venda de insumos. Actualmente me encuentro realizando un curso de Adobe Illustrator, el cual me ayuda con lo que es diseño para luego plasmarlo en la piel de cada cliente.
             <br><br>
             -¿Que es la técnica handpoke?
