--- a/tienda.html
+++ b/tienda.html
@@ -28,32 +28,25 @@
 
     <p>Venta por mayor al mejor precio!</p> 
     <p> <strong>Pack agujas</strong> </p>
-    <div class="row">
-        <span class="col-xl-3 col-md-6 col-sm-12">
+        <span>
         <img class="imagenes" src="img tatto/aguja x3.png" alt="">
         <img class="imagenes" src="img tatto/aguja x6.png" alt="">
         <img class="imagenes" src="img tatto/aguja x9.png" alt="">
         </span>
-    </div>
 
     <p> <strong> Needle top </strong> </p>
-    <div class="row">
-    <span class="col-xl-3 col-md-6 col-sm-12">
+    <span>
         <img class="imagenes" src="img tatto/needle top x3.png" alt="">
         <img class="imagenes" src="img tatto/needle top x6.png" alt="">
         <img class="imagenes"src="img tatto/needle top x9.png" alt="">
     </span>
-    </div>
 
     <p> <strong>Nuestras tinturas</strong> </p>
-    <div class="row">
-    <span class="col-xl-3 col-md-6 col-sm-12">
+    <span>
         <img class="imagenes" src="img tatto/tinta x4.png" alt="">
         <img class="imagenes" src="img tatto/tinta x8.png" alt="">
         <img class="imagenes" src="img tatto/tinta x12.png" alt="">
     </span>
-    </div>
-
     <footer class="footer">
         <p class="parrafoFooter">Sitio creado y diseñado por Etienne Tauss
             <br><br>
