vincue aos con todas mis pag

--- a/tienda.html
+++ b/tienda.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>We are Hell</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css1/estilo.css">
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header data-aos="flip-right">
         <h1>Hell Studio</h1>
         <nav>
             <ul class="ulNav">
@@ -28,11 +29,11 @@
 
     <p>Venta por mayor al mejor precio!</p> 
     <p> <strong>Pack agujas</strong> </p>
-        <span>
+        div
         <img class="imagenes" src="img tatto/aguja x3.png" alt="">
         <img class="imagenes" src="img tatto/aguja x6.png" alt="">
         <img class="imagenes" src="img tatto/aguja x9.png" alt="">
-        </span>
+    </div>
 
     <p> <strong> Needle top </strong> </p>
     <span>
@@ -55,7 +56,10 @@
     </main>
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
