--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>We are hell</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css1/estilo.css">
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
@@ -12,10 +13,10 @@
 <body>
     <header>
         <h1>Hell Studio</h1> 
-        <div>
-        <nav>
+        <nav class="row">
+            <div class="col-xs-12">
             <ul class="ulNav">
-                <li class="index1"><a href="index.html">Inicio</a></li>
+                <li class="index1" ><a href="index.html">Inicio</a></li>
                 <li class="index1"><a href="Tienda.html">Tienda</a></li>
                 <li class="index1"><a href="Diseños.html">Diseños</a></li>
                 <li class="index1"><a href="preguntasfrecuentes.html">Preguntas frec.</a></li>
@@ -77,6 +78,10 @@
                 Estudiante de Coderhouse</p>
         </footer>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
