agregue animaciones a todos mis html

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1>
         <nav>
             <ul class="ulNav">
@@ -46,7 +46,7 @@
                 Estudiante de Coderhouse</p>
         </footer>
     </main>
-    
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
