--- a/diseños.html
+++ b/diseños.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header>
+    <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1>
         <nav>
             <ul class="ulNav">
