--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1> 
         <nav class="row">
             <div class="col-xs-12">
