--- a/tienda.html
+++ b/tienda.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
 </head>
 <body>
-    <header data-aos="flip-right">
+    <header>
         <h1>Hell Studio</h1>
         <nav>
             <ul class="ulNav">
@@ -29,7 +29,7 @@
 
     <p>Venta por mayor al mejor precio!</p> 
     <p> <strong>Pack agujas</strong> </p>
-        div
+        <div data-aos="flip-up">
         <img class="imagenes" src="img tatto/aguja x3.png" alt="">
         <img class="imagenes" src="img tatto/aguja x6.png" alt="">
         <img class="imagenes" src="img tatto/aguja x9.png" alt="">
