puse mas animacion en el sector tienda

--- a/diseños.html
+++ b/diseños.html
@@ -28,7 +28,7 @@
     <h3>Diseños Hell</h3>
     
     <p><strong>Diseños para hacer en pareja</strong></p>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
             <img src="imgdiapos/pareja.png" class="d-block w-100" alt="...">
@@ -47,7 +47,8 @@
         </button>
     </div>
     <p><strong>Diseños minimalistas</strong></p>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <br>
+    <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
             <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="...">
@@ -67,8 +68,8 @@
     </div>
 
     <p><strong>De autor</strong></p>
-    <h4>(Apartado para diapositiva de imagenes)</h4>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <br>
+    <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
             <img src="imgdiapos/mios.png" class="d-block w-100" alt="...">
