--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>Mis trabajos</h3>
         <br><br>
         <!--Diap de img-->
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
                 <img src="imgdiapos/diap1.png" class="d-block w-100" alt="...">
