--- a/tienda.html
+++ b/tienda.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img tatto/iconoo.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1>
         <nav>
             <ul class="ulNav">
@@ -36,18 +36,18 @@
     </div>
 
     <p> <strong> Needle top </strong> </p>
-    <span>
+    <div data-aos="flip-up">
         <img class="imagenes" src="img tatto/needle top x3.png" alt="">
         <img class="imagenes" src="img tatto/needle top x6.png" alt="">
         <img class="imagenes"src="img tatto/needle top x9.png" alt="">
-    </span>
+    </div>
 
     <p> <strong>Nuestras tinturas</strong> </p>
-    <span>
+    <div data-aos="flip-up">
         <img class="imagenes" src="img tatto/tinta x4.png" alt="">
         <img class="imagenes" src="img tatto/tinta x8.png" alt="">
         <img class="imagenes" src="img tatto/tinta x12.png" alt="">
-    </span>
+    </div>
     <footer class="footer">
         <p class="parrafoFooter">Sitio creado y diseñado por Etienne Tauss
             <br><br>
