--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1> 
-        <nav class="row">
-            <div class="col-xs-12">
+        <nav>
+            <div>
             <ul class="ulNav">
                 <li class="index1" ><a href="index.html">Inicio</a></li>
-                <li class="index1"><a href="Tienda.html">Tienda</a></li>
-                <li class="index1"><a href="Diseños.html">Diseños</a></li>
+                <li class="index1"><a href="tienda.html">Tienda</a></li>
+                <li class="index1"><a href="diseños.html">Diseños</a></li>
                 <li class="index1"><a href="preguntasfrecuentes.html">Preguntas frec.</a></li>
                 <li class="index1"><a href="Contacto.html">Contacto</a></li>
             </ul>
