--- a/preguntasfrecuentes.html
+++ b/preguntasfrecuentes.html
@@ -14,6 +14,7 @@
     <header data-aos="zoom-in-down">
         <h1>Hell Studio</h1>
         <nav>
+            <div>
             <ul class="ulNav">
                 <li class="index1"><a href="index.html">Inicio</a></li>
                 <li class="index1"><a href="Tienda.html">Tienda</a></li>
@@ -21,6 +22,7 @@
                 <li class="index1"><a href="preguntasfrecuentes.html">Preguntas frec.</a></li>
                 <li class="index1"><a href="Contacto.html">Contacto</a></li>
             </ul>
+            </div>
         </nav>
     </header>
     <main>
