--- a/contacto.html
+++ b/contacto.html
@@ -16,10 +16,10 @@
         <nav>
             <ul class="ulNav">
                 <li class="index1"><a href="index.html">Inicio</a></li>
-                <li class="index1"><a href="Tienda.html">Tienda</a></li>
-                <li class="index1"><a href="Diseños.html">Diseños</a></li>
+                <li class="index1"><a href="tienda.html">Tienda</a></li>
+                <li class="index1"><a href="diseños.html">Diseños</a></li>
                 <li class="index1"><a href="preguntasfrecuentes.html">Preguntas frec.</a></li>
-                <li class="index1"><a href="Contacto.html">Contacto</a></li>
+                <li class="index1"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
