--- a/tienda.html
+++ b/tienda.html
@@ -16,8 +16,8 @@
         <nav>
             <ul class="ulNav">
                 <li class="index1"><a href="index.html">Inicio</a></li>
-                <li class="index1"><a href="Tienda.html">Tienda</a></li>
-                <li class="index1"><a href="Diseños.html">Diseños</a></li>
+                <li class="index1"><a href="tienda.html">Tienda</a></li>
+                <li class="index1"><a href="diseños.html">Diseños</a></li>
                 <li class="index1"><a href="preguntasfrecuentes.html">Preguntas frec.</a></li>
                 <li class="index1"><a href="Contacto.html">Contacto</a></li>
             </ul>
