--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <meta name="keywords" content="tatuajes, CABA, emprendimiento,tienda,handpoke">
+    <meta name="keywords" content="tatuajes, CABA, emprendimiento,expicacion,handpoke">
+    <meta name="description" content= "Conoceme a mi, y el handpoke, la manera mas sana y menos invasiva de tatuaje para tu cuerpo">
     <title>We are hell</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
