--- a/preguntasfrecuentes.html
+++ b/preguntasfrecuentes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="description" content="Aqui encontraras todas las respuestas que surgen comunmente">
     <meta name="keywords" content="tatuajes, CABA, emprendimiento,preguntas,respuestas,handpoke">
     <title>We are Hell</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
