agregue description a los alt

--- a/diseños.html
+++ b/diseños.html
@@ -33,10 +33,10 @@
     <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="...">
+            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="3 imagenes de ideas para hacer con tu pareja">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="...">
+            <img src="imgdiapos/pareja.png" class="d-block w-100" alt="3 imagenes de ideas para hacer con tu pareja">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -53,10 +53,10 @@
     <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="...">
+            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="3 ideas de tatuajes minimalista">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="...">
+            <img src="imgdiapos/minimalista.png" class="d-block w-100" alt="3 ideas de tatuajes minimalista">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -74,7 +74,7 @@
     <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-            <img src="imgdiapos/mios.png" class="d-block w-100" alt="...">
+            <img src="imgdiapos/mios.png" class="d-block w-100" alt="algunos tatuajes hechos por mi">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
             <img src="imgdiapos/mios.png" class="d-block w-100" alt="...">
