--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div data-aos="fade-right" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="imgdiapos/diap1.png" class="d-block w-100" alt="...">
+                <img src="imgdiapos/diap1.png" class="d-block w-100" alt="primeras 3 imagenes de mis trabajos">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="imgdiapos/puti.jpg" class="d-block w-100" alt="...">
+                <img src="imgdiapos/puti.jpg" class="d-block w-100" alt="segunda tres imagenes de mis trabajos">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
