--- a/tienda.html
+++ b/tienda.html
@@ -32,9 +32,9 @@
     <p>Venta por mayor al mejor precio!</p> 
     <p> <strong>Pack agujas</strong> </p>
         <div data-aos="flip-up">
-        <img class="imagenes" src="img tatto/aguja x3.png" alt="">
-        <img class="imagenes" src="img tatto/aguja x6.png" alt="">
-        <img class="imagenes" src="img tatto/aguja x9.png" alt="">
+        <img class="imagenes" src="img tatto/aguja x3.png" alt="pack de agujas x3">
+        <img class="imagenes" src="img tatto/aguja x6.png" alt="pack de agujas x6">
+        <img class="imagenes" src="img tatto/aguja x9.png" alt="pack de agujas x9">
     </div>
 
     <p> <strong> Needle top </strong> </p>
